experiement_output/error_log/nondex-GusarovArtem-Jupiter.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1301/wd/NonDex-plugin-test/github.com/GusarovArtem/Jupiter/src/main/java/ua/jupiter/database/entity/message/Message.java:46: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    List<Comment> comments = new ArrayList<>();
                  ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1301/wd/NonDex-plugin-test/github.com/GusarovArtem/Jupiter/src/main/java/ua/jupiter/database/entity/message/Comment.java:24: warning: Generating equals/hashCode implementation but without a call to superclass, even though this class does not extend java.lang.Object. If this is intentional, add '@EqualsAndHashCode(callSuper=false)' to your type.
@EqualsAndHashCode( of = {"id"})
^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1301/wd/NonDex-plugin-test/github.com/GusarovArtem/Jupiter/src/main/java/ua/jupiter/database/entity/message/Message.java:19: warning: Generating equals/hashCode implementation but without a call to superclass, even though this class does not extend java.lang.Object. If this is intentional, add '@EqualsAndHashCode(callSuper=false)' to your type.
@EqualsAndHashCode(of = {"id"})
^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1301/wd/NonDex-plugin-test/github.com/GusarovArtem/Jupiter/src/main/java/ua/jupiter/database/entity/user/User.java:11: error: cannot find symbol
import java.io.Serial;
              ^
  symbol:   class Serial
  location: package java.io
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1301/wd/NonDex-plugin-test/github.com/GusarovArtem/Jupiter/src/main/java/ua/jupiter/database/entity/user/User.java:30: error: cannot find symbol
    @Serial
     ^
  symbol:   class Serial
  location: class User
2 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 17s
